
[package]
name = "renec-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Renec Maintainers <dev@renec.foundation>"]
repository = "https://github.com/renec-chain/example-helloworld"
license = "Apache-2.0"
homepage = "https://renec.foundation/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.0"
borsh-derive = "0.10.0"
solana-program = "~1.10.35"

[dev-dependencies]
solana-program-test = "~1.10.35"
solana-sdk = "~1.10.35"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
